--- a/bench/exp_series.html
+++ b/bench/exp_series.html
@@ -41,7 +41,6 @@
     }
     function flotSeries(expSeries, xMax, labelSpec, plotSpecs) {
         return $.map(plotSpecs, function(plotSpec, i){
-            var base = plotSpec.base; var gen = plotSpec.generator; var op = plotSpec.operation;
             return {
                 label: labelSpec + ': ' + plotSpec[labelSpec],
                 data: genOpXY(expSeries, xMax, plotSpec, 'exp2', 'ops'),
@@ -68,70 +67,83 @@ $(function () {
            { 
                xaxis: { ticks: xExpTicks },
                yaxes: [ { min: 0 } ],
-               legend: { position: 'ne' }
+               legend: { position: 'ne' },
+               grid: { hoverable: true }
            });
     }
 
     // comment pending
     var graph = [
-        [ 'value_string_size insert C versus Ruby', 14, 'mongo_driver_mode',
+        [ 'value_string_size insert C versus Ruby', 14, 'mode',
             [
-                { base:2, generator:'value_string_size', operation:'insert', mongo_driver_mode: 'c' },
-                { base:2, generator:'value_string_size', operation:'insert', mongo_driver_mode: 'ruby' }
+                { base:2, generator:'value_string_size', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:2, generator:'value_string_size', operation:'insert', mode: 'ruby', tag: 'orig_ruby' }
             ]
         ],
-        [ 'key_string_size insert C versus Ruby', 14, 'mongo_driver_mode',
+        [ 'key_string_size insert C versus Ruby', 14, 'mode',
             [
-                { base:2, generator:'key_string_size', operation:'insert', mongo_driver_mode: 'c' },
-                { base:2, generator:'key_string_size', operation:'insert', mongo_driver_mode: 'ruby' }
+                { base:2, generator:'key_string_size', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:2, generator:'key_string_size', operation:'insert', mode: 'ruby', tag: 'orig_ruby' }
             ]
         ],
-        [ 'array_size_fixnum insert C versus Ruby', 12, 'mongo_driver_mode',
+        [ 'array_size_fixnum insert C versus Ruby', 12, 'mode',
             [
-                { base:2, generator:'array_size_fixnum', operation:'insert', mongo_driver_mode: 'c' },
-                { base:2, generator:'array_size_fixnum', operation:'insert', mongo_driver_mode: 'ruby' }
+                { base:2, generator:'array_size_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:2, generator:'array_size_fixnum', operation:'insert', mode: 'ruby', tag: 'orig_ruby' }
             ]
         ],
-        [ 'hash_size_fixnum insert C versus Ruby', 12, 'mongo_driver_mode',
+        [ 'hash_size_fixnum insert C versus Ruby', 12, 'mode',
             [
-                { base:2, generator:'hash_size_fixnum', operation:'insert', mongo_driver_mode: 'c' },
-                { base:2, generator:'hash_size_fixnum', operation:'insert', mongo_driver_mode: 'ruby' }
+                { base:2, generator:'hash_size_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:2, generator:'hash_size_fixnum', operation:'insert', mode: 'ruby', tag: 'orig_ruby' }
             ]
         ],
-        [ 'array_nest_fixnum base 2 insert C versus Ruby', 12, 'mongo_driver_mode',
+        [ 'array_nest_fixnum base 2 insert C versus Ruby', 12, 'mode',
             [
-                { base:2, generator:'array_nest_fixnum', operation:'insert', mongo_driver_mode:'c' },
-                { base:2, generator:'array_nest_fixnum', operation:'insert', mongo_driver_mode:'ruby' }
+                { base:2, generator:'array_nest_fixnum', operation:'insert', mode:'c', tag: 'array_slow' },
+                { base:2, generator:'array_nest_fixnum', operation:'insert', mode:'ruby', tag: 'orig_ruby' }
             ]
         ],
-        [ 'hash_nest_fixnum base 2 insert C versus Ruby', 12, 'mongo_driver_mode',
+        [ 'hash_nest_fixnum base 2 insert C versus Ruby', 12, 'mode',
             [
-                { base:2, generator:'hash_nest_fixnum', operation:'insert', mongo_driver_mode: 'c' },
-                { base:2, generator:'hash_nest_fixnum', operation:'insert', mongo_driver_mode: 'ruby' }
+                { base:2, generator:'hash_nest_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:2, generator:'hash_nest_fixnum', operation:'insert', mode: 'ruby', tag: 'orig_ruby' }
             ]
         ],
         [ 'array_nest_fixnum insert C by base', 12, 'base',
             [
-                { base:2, generator:'array_nest_fixnum', operation:'insert', mongo_driver_mode: 'c' },
-                { base:4, generator:'array_nest_fixnum', operation:'insert', mongo_driver_mode: 'c' },
-                { base:8, generator:'array_nest_fixnum', operation:'insert', mongo_driver_mode: 'c' },
-                { base:16, generator:'array_nest_fixnum', operation:'insert', mongo_driver_mode: 'c' },
-                { base:32, generator:'array_nest_fixnum', operation:'insert', mongo_driver_mode: 'c' }
+                { base:2, generator:'array_nest_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:4, generator:'array_nest_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:8, generator:'array_nest_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:16, generator:'array_nest_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:32, generator:'array_nest_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' }
             ]
         ],
         [ 'hash_nest_fixnum insert C by base', 12, 'base',
             [
-                { base:2, generator:'hash_nest_fixnum', operation:'insert', mongo_driver_mode: 'c' },
-                { base:4, generator:'hash_nest_fixnum', operation:'insert', mongo_driver_mode: 'c' },
-                { base:8, generator:'hash_nest_fixnum', operation:'insert', mongo_driver_mode: 'c' },
-                { base:16, generator:'hash_nest_fixnum', operation:'insert', mongo_driver_mode: 'c' },
-                { base:32, generator:'hash_nest_fixnum', operation:'insert', mongo_driver_mode: 'c' }
+                { base:2, generator:'hash_nest_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:4, generator:'hash_nest_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:8, generator:'hash_nest_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:16, generator:'hash_nest_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:32, generator:'hash_nest_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' }
             ]
         ],
-        [ 'array_size_fixnum versus hash_size_fixnum insert C', 12, 'generator',
+        [ 'array_size_fixnum slow versus hash_size_fixnum insert C', 12, 'generator',
             [
-                { base:2, generator:'array_size_fixnum', operation:'insert', mongo_driver_mode: 'c' },
-                { base:2, generator:'hash_size_fixnum', operation:'insert', mongo_driver_mode: 'c' }
+                { base:2, generator:'array_size_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:2, generator:'hash_size_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' }
+            ]
+        ],
+        [ 'array_size_fixnum fast versus hash_size_fixnum insert C', 12, 'generator',
+            [
+                { base:2, generator:'array_size_fixnum', operation:'insert', mode: 'c', tag: 'array_fast' },
+                { base:2, generator:'hash_size_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' }
+            ]
+        ],
+        [ 'array_size_fixnum slow versus fast insert C', 12, 'tag',
+            [
+                { base:2, generator:'array_size_fixnum', operation:'insert', mode: 'c', tag: 'array_slow' },
+                { base:2, generator:'array_size_fixnum', operation:'insert', mode: 'c', tag: 'array_fast' }
             ]
         ]
     ];
@@ -140,6 +152,41 @@ $(function () {
         title = e[0]; xMax = e[1]; labelSpec = e[2]; plotSpecs = e[3]; //[title, xMax, labelSpec, plotSpecs] = e;
         var series = flotSeries(expSeries, xMax, labelSpec, plotSpecs);
         doPlot(title, series);
+    });
+
+    function showTooltip(x, y, contents) {
+        $('<div id="tooltip">' + contents + '</div>').css( {
+            position: 'absolute',
+            display: 'none',
+            top: y + 5,
+            left: x + 5,
+            border: '1px solid #fdd',
+            padding: '2px',
+            'background-color': '#fee',
+            opacity: 0.80
+        }).appendTo("body").fadeIn(200);
+    }
+
+    var previousPoint = null;
+    $('.graph').bind('plothover', function (event, pos, item) {
+        $("#x").text(pos.x.toFixed(2));
+        $("#y").text(pos.y.toFixed(2));
+        if (item) {
+            if (previousPoint != item.dataIndex) {
+                previousPoint = item.dataIndex;
+
+                $("#tooltip").remove();
+                var x = item.datapoint[0].toFixed(2),
+                        y = item.datapoint[1].toFixed(2);
+
+                showTooltip(item.pageX, item.pageY,
+                        item.series.label + ' [ ' + Math.round(x) + ', ' + Math.round(y) + ' ]');
+            }
+        }
+        else {
+            $("#tooltip").remove();
+            previousPoint = null;
+        }
     });
 
 });
